Начинаю добавлять адаптивность на сайт

--- a/tech_help/.gitignore
+++ b/tech_help/.gitignore
@@ -81,7 +81,7 @@ bower_components/
 *.rar
 *.7z
 
-# Игнорирование миграций (если не хотите их коммитить)
+# Игнорирование миграций (если не хотим их коммитить)
 /migrations/
 !*/migrations/
 !*/migrations/__init__.py
