Перед запуском Cline

--- a/tech_help/.promtconfig
+++ b/tech_help/.promtconfig
@@ -1,6 +1,6 @@
 {
     "excludes": ["*.json", "staticfiles", "admin", "*.js", ".py", "media", "migrations", "tests/", "*.tmp"],
-    "includes": [],
+    "includes": ["*.html"],
     "max_size": 10000,
     "show_hidden": false
 }
